Decouple observer implementations with services