@@ -12,7 +12,9 @@ mkdir mods
 echo " > multi-compiling modules"
 rem spark is required as an automatic module, so copy it to mods
 copy libs\spark-core-*.jar mods\
-javac --module-path mods --module-source-path "./*/src/main/java" -d classes --module monitor
+rem since the monitor services are not required (directly or indirectly)
+rem from the root module monitor, they are added manually
+javac --module-path mods --module-source-path "./*/src/main/java" --add-modules=monitor.observer.alpha,monitor.observer.beta -d classes --module monitor
 
 echo " > packaging modules"
 jar --create --file mods/monitor.observer.jar -C classes/monitor.observer .
